packages/next-swc/crates/styled_jsx/tests/errors/nested-style-tags/input.js
const Component = () => (
  <>
    <header>
      <Comp>
        <style jsx>{styles}</style>
        <style jsx global>{``}</style>
      </Comp>
      <p><style jsx>{``}</style></p>
    </header>
    <div>
      <h1>
        Welcome!
        <style jsx>{``}</style>
      </h1>
      <style jsx>{``}</style>
    </div>
    <div>
      <style jsx>{``}</style>
      <h1>
        Hello world!
        <style jsx global>{``}</style>
      </h1>
    </div>
    <div>
      <>
        <style jsx>{styles}</style>
      </>
      <style jsx>{``}</style>
    </div>
  </>
)